--- a/style.css
+++ b/style.css
@@ -3,3 +3,43 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.wrapper {
+    display: grid;
+    justify-items: center;
+    min-height: 100vh;
+}
+
+header {
+    width: 100%;
+    position: fixed;
+}
+
+main {
+    display: grid;
+    width: 80%;
+    gap: 25px;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-auto-flow: column;
+    justify-items: center;
+    justify-content: center;
+    align-self: center;
+    padding: 35px;
+}
+
+.card {
+    width: 200px;
+    height: 250px;
+    display: grid;
+    padding: 10px;
+    background-color: #fff;
+    border: 1px solid red;
+    transition: all 0.3s;
+    position: relative;
+    z-index: 1;
+}
+
+.card:hover {
+    transform: scale(1.1);
+    z-index: 2;
+}
