--- a/style.css
+++ b/style.css
@@ -4,26 +4,34 @@
     box-sizing: border-box;
 }
 
+:root {
+    --highlight-color: rgb(250, 181, 96);
+}
+
 .wrapper {
     display: grid;
+    grid-template-rows: auto 1fr;
     justify-items: center;
+    align-items: center;
     min-height: 100vh;
 }
 
+/* Header section */
+
 header {
-    width: 100%;
-    position: fixed;
+    width: 100vw;
 }
+
+/* Gallery section */
 
 main {
     display: grid;
-    width: 80%;
     gap: 25px;
+    width: 100%;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-auto-flow: column;
     justify-items: center;
-    justify-content: center;
-    align-self: center;
+    overflow: scroll;
     padding: 35px;
 }
 
@@ -42,4 +50,97 @@ main {
 .card:hover {
     transform: scale(1.1);
     z-index: 2;
+}
+
+/* Form section */
+
+form {
+    display: grid;
+    padding: 25px;
+    gap: 15px;
+    border: 1px solid gray;
+}
+
+.inputs-wrapper {
+    display: grid;
+    align-content: center;
+    gap: 15px;
+    padding: 20px;
+    min-width: 250px;
+    min-height: 250px;
+    border: 1px solid gray;
+    border-radius: 5px;
+}
+
+label {
+    display: grid;
+}
+
+input {
+    height: 1rem;
+}
+
+input:focus {
+    outline: none;
+    border: 1px solid gray;
+    border-radius: 2px;
+    box-shadow: 0 0 3px var(--highlight-color);
+}
+
+.checkbox {
+    display: grid;
+    grid-template-columns: auto auto;
+    align-items: center;
+}
+
+.switch {
+    position: relative;
+    width: 30px;
+    height: 15px;
+    border-radius: 10px;
+}
+
+.slider {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: lightgray;
+    border: 1px solid lightgray;
+    border-radius: 10px;
+    transition: all 0.5s;
+}
+
+.slider::before {
+    content: "";
+    position: absolute;
+    background-color: #fff;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 15px;
+    border-radius: 10px;
+    transition: all 0.5s;
+}
+
+.switch input:checked+.slider::before {
+    transform: translateX(13px);
+}
+
+.switch input:checked+.slider {
+    border-color: var(--highlight-color);
+    background-color: var(--highlight-color);
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.switch input:focus+.slider {
+    box-shadow: 0 0 3px var(--highlight-color);
 }
