--- a/style.css
+++ b/style.css
@@ -5,11 +5,12 @@
 }
 
 :root {
-    --highlight-color: #C44900;
-    --dark-color: #183A37;
-    --light-color: #f9f5ec;
-    --transparent-black: #04151FAA;
-    --contrast-color: #68334e;
+    --highlight-color: #f55656;
+    ;
+    --dark-color: #005f57;
+    --light-color: #ffffff;
+    --transparent-black: #04151f45;
+    --contrast-color: #636363;
     font-family: arial;
 }
 
@@ -54,6 +55,7 @@ header {
     padding: 20px 35px;
     background-color: var(--dark-color);
     color: #fff;
+    box-shadow: 0px 0px 5px black;
 }
 
 h1 {
@@ -106,7 +108,7 @@ main {
 
 .card {
     font-weight: 600;
-    font-size: 1rem ;
+    font-size: 1rem;
     line-height: 1rem;
 }
 
@@ -123,6 +125,7 @@ main {
     justify-self: center;
     color: gray;
 }
+
 .un-read {
     font-weight: 400;
     justify-self: center;
@@ -140,6 +143,7 @@ main {
     font-size: 12px;
     font-weight: bold;
     background: none;
+    text-transform: uppercase;
     color: var(--highlight-color);
 }
 
@@ -205,7 +209,7 @@ input:focus {
     outline: none;
     border: 1px lightgray;
     border-radius: 2px;
-    box-shadow: 0 0 3px var(--highlight-color);
+    box-shadow: 0 0 3px var(--dark-color);
 }
 
 .checkbox {
